# StegoBMP

./: .gitignore  CMakeLists.txt  README.md  bmpParser.c  cryptoUtils.c  decrypt.c  embed.c  encrypt.c  extract.c  fileParser.c  lsb1  main  main.c  makefile  message.txt  metrics.sh  parser.c  scriptToMeassureTime.sh  sol1.txt  test
enc/: rc4.c
include/: bmpParser.h  cryptoUtils.h  decrypt.h  embed.h  encrypt.h  extract.h  fileParser.h  lsbEmbed.h  lsbExtract.h  lsbHelper.h  parser.h  rc4.h  types.h
lsbi/: rc4.c
stego/: lsb1.c  lsb1.h  lsbDecrypt.c  lsbDecrypt.h  lsbEmbed.c  lsbEmbed.h  lsbEncrypt.c  lsbEncrypt.h  lsbExtract.c  lsbExtract.h  lsbHelper.c  rc4.c
tests/: CMakeLists.txt  bmpParser.c  test  testEncrypt.c  testFileParser.c  testLsb.c  testLsbHelper.c  testParser.c  testRC4.c  testSuite.c
tests/include/: testEncrypt.h  testLsb.h  testLsbHelper.h  testParser.h  testRC4.h  testSuite.h
tests/resources/: loremIpsum.txt  lsbSample.txt  message.txt  newMessage.txt
