cmake_minimum_required(VERSION 3.13)
project(StegoBMP)
set(CMAKE_CXX_STANDARD 14)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
include_directories(include)
find_package(OpenSSL REQUIRED)
file(GLOB stego_SRC "lsbi/rc4.c" "stego/*.c" "*.c")
add_executable(bmpParserTest tests/bmpParser.c bmpParser.c)
add_executable(main ${stego_SRC})
add_executable(test tests/testSuite.c tests/testParser.c parser.c tests/testRC4.c lsbi/rc4.c tests/testEncrypt.c
                    embed.c extract.c cryptoUtils.c)
target_link_libraries(main OpenSSL::SSL)
target_link_libraries(test OpenSSL::SSL)
target_include_directories(main PRIVATE include)
