cmake_minimum_required(VERSION 3.13)
project(StegoBMP)
set(CMAKE_CXX_STANDARD 14)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
include_directories(include)
find_package(OpenSSL REQUIRED)
file(GLOB stego_src "stego/rc4.c" "stego/*.c" "*.c")
file(GLOB test_src "tests/*.c" "stego/rc4.c" "stego/*.c" "cryptoUtils.c" "embed.c" "extract.c" "fileParser.c" "parser.c")
add_executable(main ${stego_src})
add_executable(test ${test_src} tests/testLsbHelper.c tests/include/testLsbHelper.h)
target_link_libraries(main OpenSSL::SSL m)
target_link_libraries(test OpenSSL::SSL m)
target_include_directories(main PRIVATE include)
target_include_directories(test PRIVATE include)